@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # Install GRUB on your drive.
-# Copyright (C) 1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009  Free Software Foundation, Inc.
+# Copyright (C) 1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010  Free Software Foundation, Inc.
 #
 # GRUB is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -327,8 +327,7 @@ if test "x$fs_module" = x -a "x$modules" = x; then
 fi
 
 # Then the partition map module.  In order to support partition-less media,
-# this command is allowed to fail (--target=fs already grants us that the
-# filesystem will be accessible).
+# this command is allowed to fail.
 partmap_module=
 for x in `$grub_probe --target=partmap --device ${grub_device} 2> /dev/null`; do
    partmap_module="$partmap_module part_$x";
@@ -401,6 +400,14 @@ case "${target_cpu}-${platform}" in
     mips-yeeloong) mkimage_target=mipsel-yeeloong-elf ;;
     *) mkimage_target=i386-coreboot;
 esac
+
+# Verify readability of a few critical files
+for file in grubenv core.${imgext} normal.mod ; do
+    if is_path_readable_by_grub ${grubdir}/${file} ${grub_device} ${relative_grubdir}/${file} ; then : ; else
+        echo "GRUB is unable to read ${grubdir}/${file}" >&2
+        exit 1
+    fi
+done
 
 if [ "${target_cpu}-${platform}" = "i386-pc" ] || [ "${target_cpu}-${platform}" = "sparc64-ieee1275" ] ; then
     $grub_mkimage ${config_opt} -O ${mkimage_target} --output=${grubdir}/core.img --prefix=${prefix_drive}${relative_grubdir} $modules || exit 1
