@@ -303,6 +303,12 @@ for i in ${grub_mkconfig_dir}/* ; do
   esac
 done
 
+# Verify readability of ${grub_cfg}.new
+if is_path_readable_by_grub ${grub_cfg}.new ; then : ; else
+  echo "GRUB is unable to read ${grubdir}/${file}" >&2
+  exit 1   
+fi
+
 if test "x${grub_cfg}" != "x" ; then
   # none of the children aborted with error, install the new grub.cfg
   mv -f ${grub_cfg}.new ${grub_cfg}
